thetvdb: failing to compare episode titles.

Using g_ascii_strncasecmp with 0 as number of chars to compare always
return 0.

https://bugzilla.gnome.org/show_bug.cgi?id=741207